commande pour compiler